# minidrive

./: CMakeLists.txt  README.md  integration_smoke
client/: CMakeLists.txt
client/include/: client.hpp  commands.hpp
client/src/: main.cpp
cmake/: Dependencies.cmake
data/users/: users.json
server/: CMakeLists.txt
server/include/: auth_manager.hpp  client_handler.hpp  file_manager.hpp  resume_manager.hpp  server.hpp  user_file_manager.hpp
server/src/: main.cpp
shared/: CMakeLists.txt
shared/include/minidrive/: minidrive.hpp  version.hpp
shared/include/minidrive/network/: socket.hpp
shared/include/minidrive/protocol/: error_codes.hpp  message.hpp
shared/include/minidrive/utils/: base64.hpp  hash.hpp  path_utils.hpp
shared/src/: version.cpp
tests/: CMakeLists.txt
tests/integration/: smoke.cpp
